# fastapi-todo-clean-architecture

./: README.md  config.yaml  main.py  pyproject.toml
app/: container.py  controller.py  database.py  dto.py  model.py  orm.py  repository.py  service.py  uow.py
