[tool.poetry]
name = "fastapi-todo-clean-architecture"
version = "0.1.0"
description = ""
authors = ["Hansaem Woo <sam.woo@petnow.io>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
dependency-injector = "^4.40.0"
providers = "^0.0.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
